--- a/frontend/style.css
+++ b/frontend/style.css
@@ -7,3 +7,15 @@
 body{
     background-color: #f5f5f5;
 }
+
+.nav {
+    width: 100%;
+    height: 60px;
+    background-color: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+ 
